
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* cope now depends on new project copeutil
	- add exedio-cope-util.jar where trove.jar is used as well
* add Schedule.enabled, adds new columns to schema, should be initialized with "true"
* changed url of content editor from contentEditorLogin.html or copeContentEditor.html to copeLiveEdit.html
* in contentEditor.css remove any styles related to contentEditorBar
* for content editor, Editor.writeHead must be called in html head
* renamed EditorPreview to Draft
* added SHAHash as a replacement for MD5Hash, which is no longer secure
* field for storing hashes uses algorithm for name,
	i.e. passwordHash becomes passwordMD5
	affects instrumented methods and persistent schema
* support for
	<taskdef resource="com/exedio/cope/instrument/ant.properties" classpath="lib/exedio-cope-instrument.jar" />
* Editor
	- put classes into separate package com.exedio.cope.editor
	- make Login a top-level interface and rename it to Session
* updated cops library to build.54, do get it from cops project now
* updated jspm library to build.14, added check.version target to getlib.xml
* added Query.emptyResult()