@@ -11,7 +11,7 @@ commons-io = 1.1
 hsqldb = 1.808
 trove = 2.02
 
-exedio-cope-util = 20090211093235
+exedio-cope-util = 20090213113826
 
 # cruise build cops 54
 exedio-cops = 20081210090013
