@@ -176,7 +176,7 @@ public class DispatcherItem extends Item implements Dispatchable
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.dispatch public|package|protected|private|none|non-final</tt> in the comment of the field.
 	 */
-	static final int dispatchToTarget(final com.exedio.cope.pattern.Interrupter interrupter)
+	static final int dispatchToTarget(final com.exedio.cope.util.Interrupter interrupter)
 	{
 		return DispatcherItem.toTarget.dispatch(DispatcherItem.class,interrupter);
 	}/**
