@@ -75,7 +75,7 @@ public class DispatcherNoneItem extends Item
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.dispatch public|package|protected|private|none|non-final</tt> in the comment of the field.
 	 */
-	static final int dispatchWrong(final com.exedio.cope.pattern.Interrupter interrupter)
+	static final int dispatchWrong(final com.exedio.cope.util.Interrupter interrupter)
 	{
 		return DispatcherNoneItem.wrong.dispatch(DispatcherNoneItem.class,interrupter);
 	}/**
