@@ -137,7 +137,7 @@ public class PasswordRecoveryItem extends Item
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.purge public|package|protected|private|none|non-final</tt> in the comment of the field.
 	 */
-	static final int purgePasswordRecovery(final com.exedio.cope.pattern.Interrupter interrupter)
+	static final int purgePasswordRecovery(final com.exedio.cope.util.Interrupter interrupter)
 	{
 		return PasswordRecoveryItem.passwordRecovery.purge(PasswordRecoveryItem.class,interrupter);
 	}/**
