@@ -29,6 +29,7 @@ import java.util.List;
 import com.exedio.cope.BooleanField;
 import com.exedio.cope.Item;
 import com.exedio.cope.pattern.ScheduleTest.Log;
+import com.exedio.cope.util.Interrupter;
 
 public final class ScheduleItem extends Item implements Scheduleable
 {
@@ -127,7 +128,7 @@ public final class ScheduleItem extends Item implements Scheduleable
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.run public|package|protected|private|none|non-final</tt> in the comment of the field.
 	 */
-	static final int runReport(final com.exedio.cope.pattern.Interrupter interrupter)
+	static final int runReport(final com.exedio.cope.util.Interrupter interrupter)
 	{
 		return ScheduleItem.report.run(ScheduleItem.class,interrupter);
 	}/**
