@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* Interrupter from exedio-cope-util.jar is used
+	- affects Dispatcher, Schedule, PasswordRecovery
 * cope now depends on new project copeutil
 	- add exedio-cope-util.jar where trove.jar is used as well
 * add Schedule.enabled, adds new columns to schema, should be initialized with "true"
